# aaa

./: .gitignore  ARCHITECTURE_FIX.md  CHECKSUM.txt  COMPLETE_FLOW.md  DEBUG_502_ERROR.md  EMBEDDING_STRATEGY.md  LICENSE.txt  MAX_TOKENS_IMPACT.md  NGROK_PORT_FIX.md  PUSH_CHECK.txt  RAM_OPTIMIZATION_GUIDE.md  README.md  SHELL_VS_BATCH.md  STARTUP_GUIDE.md  TODO_CHECKLIST.md  api.py  body.json  body2.json  chat.db  chat.py  chat_dynamic_router.py  chat_fixed.py  chat_hieu.py  chat_optimized.py  chat_roq.py  check_models.py  check_ngrok_url.bat  check_ngrok_url.sh  check_qdrant.py  check_score.py  combined_api.py  conversations.sql  create_books_db.py  create_faq_db.py  create_majors_db.py  data.pth  debug_chat.py  debug_failures.py  debug_qdrant_data.py  debug_router.py  (+46 more)
.conda/.condatmp/: 2e4473a2-570e-4f3b-a0a6-8a2f5b162786  354b2f32-06a2-436a-a784-279c1e1911c4  48e53175-7355-49be-9829-e15dfca48026  e0dfb214-c4ee-456a-abaa-1cb445008a5d  (+1 more)
Daihoctaynguyen/: DHTN.html
banghiamcuoicung/: requirements.txt  server.py
connect/: export_logs.py  merge_logs.py
rag/: .env.example  .gitignore  bang.py  build_index.py  db_connector.py  faq.db  faqs.db  ingest_notion.py  notion_upsert.py  push_logs.py  python sync_notion_sqlite.py  rag_server.py  retriever.py  sync_notion_sqlite.py
rag/data/: faqs.json  (+2 more)
reports_html/: Chatbot_html.html  app_js.html  chat_dynamic_router_py.html  chat_py.html  push_to_qdrant_dynamic_py.html  sync_dynamic_py.html
view/: Chatbot.css  Chatbot.html  app.js  app.py  chat.css  chatbot.css  index.html  run.py  script.js  style.css  view_logs.py
(+5 files in other folders)
