[project]
name = "a-copy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.4",
    "numpy>=2.2.6",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "remodel>=1.0.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
]
